...
      <AccessibilityProvider>
        <CalendarProvider>
          <Tab.Navigator screenOptions={screenOptions}>
            <Tab.Screen
              name="home"
              component={HomeScreen}
              options={{ tabBarButtonTestID: "home-tab" }}
            />
            <Tab.Screen
              name="location"
              component={LocationScreen}
              options={{ tabBarButtonTestID: "location-tab" }}
            />
            <Tab.Screen
              name="menu"
              component={MenuScreen}
              options={{ tabBarButtonTestID: "menu-tab" }}
            />
          </Tab.Navigator>
        </CalendarProvider>
      </AccessibilityProvider>
    </UserProvider>
  );
...
